添加日志功能和redis

--- a/src/main/resources/templates/Error.html
+++ b/src/main/resources/templates/Error.html
@@ -20,6 +20,12 @@
             返回首页.
         </a>
     </div>
+    <div class="row">
+        <div>问题原因:</div>
+    </div>
+    <div class="row">
+        <div th:text="${reason}"></div>
+    </div>
 </div>
 </body>
 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
